--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -22,6 +22,283 @@
     "sidebar.iss":"User Issues",
     "sidebar.bug":"Bug Reports",
 
+    "procard.in":"In Progress",
+    "procard.comp":"Completed",
+    "procard.team":"Team",
+    "procard.due":"Due",
+    "procard.upd":"Updated",
+    "procard.own":"Project Owner",
+    "procard.prog":"Progress",
+    "procard.del":"Delete Project",
+    "procard.deld":"Are you sure you want to delete",
+    "procard.deld2":"This action cannot be undone.",
+    "procard.add":"Create New Project",
+    "procard.add.tit":"Project Name",
+    "procard.add.titd":"Enter project name",
+    "procard.add.due":"Due Date",
+    "procard.add.desc":"Project will be created by",
+    "procard.add.create":"Create Project",
+
+    "toggle.h":"Horizontal",
+    "toggle.v":"Vertical",
+
+    "prode.create":"Create Category",
+    "prode.search":"Search categories, tasks, entries...",
+    "prode.new":"New Categorizer",
+    "prode.add":"Add List",
+    "prode.prog":"Progress",
+    "prode.load":"Loading project details...",
+    "prode.fin":"All Tasks Complete",
+    "prode.find":"Great job completing all your tasks",
+    "prode.e":"Edit Category",
+    "prode.e.tit":"Title",
+    "prode.e.titd":"New Categorizer",
+    "prode..e.tag":"Tag Color",
+    "prode.e.col":"red",
+    "prode.del":"Delete",
+    "prode.can":"Cancel",
+    "prode.done":"Done",
+    "prode.del.tit":"Delete Category",
+    "prode.del.d":"Are you sure? This cannot be undone.",
+    "prode.addent":"Add Entry",
+    "prode.edit.task":"Edir Task List",
+    "prode.no.ent":"No entries",
+
+
+    "prode.edit":"Edit",
+    "prode.ass":"Assign",
+    "prode.delete":"Delete",
+
+    "prode.edit.tit":"Edit Task",
+    "prode.edit.name":"Task Name",
+    "prode.edit.due":"Due Date",
+    "prode.edit.mark":"Mark as completed",
+    "prode.edit.att":"Attach File",
+    "prode.edit.attd":"Choose File ",
+    "prode.edit.attd2":"no file selected ",
+    "prode.edit.attd3":"Upload a new file to replace the current one. ",
+    "prode.edit.save":"Save Changes",
+    "prode.edit.clr":"Clear",
+    "prode.edit.warn":"Warning Threshold (days)",
+    "prode.edit.warnd":"Show warning when task is due within this many days",
+  
+
+    "prode.ass.tit":"Assign Task",
+    "prode.ass.1":"Assigned Teams",
+    "prode.ass.2":"Avaible Teams",
+    "prode.ass.3":"Assigned Users",
+    "prode.ass.4":"Avaible Users",
+    "prode.ass.add":"Add",
+    "prode.ass.ass":"Assign Task",
+
+
+    "cal.tit":"Calendar",
+    "cal.cal":"Project Calendar",
+    "cal.today":"Today",
+    "cal.tasks":"Tasks for",
+    "cal.tasks.no":"No tasks scheduled for this date",
+
+    "team.mem":"Member",
+    "team.mid":"Middle",
+    "team.sen":"Senior",
+    "team.jun":"Junior",
+    "team.lead":"Team Lead",
+
+    "set.tit":"Project Settings",
+    "set.gen":"General Settings",
+    "set.name":"Project Name",
+    "set.d":"Description",
+    "set.update":"Update Background Image",
+    "set.choose":"Choose File",
+    "set.no":"no file selected",
+    "set.advanced":"Advanced Settings",
+    "set.delete":"Delete Project",
+    "set.per":"You need to be the project owner to modify these settings",
+    "set.named":"My Project",
+    "set.dd":"A brief description of my project.",
+    "set.warn":"Are you sure you want to delete this project?",
+    "set.warn.ok":"Project deleted!",
+
+    "adset.tit":"Advanced Settings",
+    "adset.back":"Go Back to General Settings",
+    "adset.inv":"Invite People",
+    "adset.search":"Search Members",
+    "adset.acc":"Manage Access",
+    "adset.team":"Manage Team",
+    "adset.rem":"Remove",
+    "adset.own":"Owner",
+    "adset.team2":"Team",
+    
+
+    "adset.email":"Email Address",
+    "adset.emaild":"Enter email...",
+    "adset.invite":"Invite",
+    "adset.link":"Invite by Link",
+
+    "adset.add":"Add Team",
+    "adset.teaman":"Manage Teams for",
+    "adset.save":"Save",
+    "adset.done":"Done",
+
+    "adset.access":"'s Access",
+    "adset.view":"View Project",
+    "adset.edit":"Edit Project",
+    "adset.del":"Delete Project",
+
+    "adset.conf":"Confirm Removal",
+    "adset.confm":"Are you sure you want to remove",
+    "adset.remteam":"Are you sure you want to delete the team",
+    "adset.delcon":"Confirm Deletion",
+    "adset.add2":"Add",
+    "adset.text":"New team name",
+    
+    
+    
+
+    
+
+
+    "dashboard.well":"Welcome to your Dashboard",
+    "dashboard.welld":"Here's an overview of your projects and team's progress.",
+    "dashboard.view":"View All Projects",
+    "dashboard.total":"Total Projects",
+    "dashboard.progress":"In Progress",
+    "dashboard.viewall":"View All",
+    "dashboard.complete":"Completed",
+    "dashboard.proprog":"Project Progress",
+    "dashboard.recent":"Recent Activity",
+    "dashboard.upcoming":"Upcoming Deadlines",
+    "dashboard.doc":"Recent Documents",
+    "dashboard.view.timeline":"View Timeline",
+    "dashboard.risk":"At Risk",
+    "dashboard.track":"On Track",
+    "dashboard.update":"Updated",
+    "dashboard.due":"Due",
+    "dashboard.terms":"Terms",
+    "dashboard.pri":"Privacy",
+    "dashboard.made":"Made with",
+    "dashboard.by":"by PlanWise",
+    "dashboard.rights":"All rights reserved",
+    "dashboard.week":"since last week",
+    "dashboard.month":"since last month",
+
+    "gantt.tit":"Project Timeline",
+    "gantt.projects":"Projects",
+    "gantt.all":"All Projects",
+    "gantt.filter":"Filter by Project",
+    "gantt.task":"Tasks",
+    "gantt.comp":"Completed",
+    "gantt.in":"In Progress",
+    "gantt.not":"Not Started",
+    "gantt.risk":"At Risk",
+    "gantt.leg":"Legend",
+
+    "bug.rep":"Your Reports",
+    "bug.open":"Open Issues",
+    "bug.in":"In Progress",
+    "bug.res":"Resolved",
+    "bug.search":"Search reports by title or description",
+    "bug.stat":"All Statuses",
+    "bug.pri":"All Priorities",
+    "bug.bugs":"Bugs & Incidents",
+    "bug.report":"Report Issues",
+    "bug.foot":"Issue Tracker",
+    "bug.filtered":"Filtered Reports",
+
+
+
+    "bug.replies":"replies",
+    "bug.reply":"reply",
+    "bug.view":"View Details",
+    "bug.reported":"Reported on",
+    "bug.tit":"Issue Title",
+    "bug.titd":"Brief summary of the issue",
+    "bug.d":"Description",
+    "bug.dd":"Please provide details about what happened and how to reproduce the issue",
+    "bug.cat":"Category",
+    "bug.cat.sel":"Select category",
+    "bug.cat.bug":"Bug",
+    "bug.cat.feature":"Feature",
+    "bug.cat.ench":"Enchancement",
+    "bug.priority":"Priority",
+    "bug.pri.sel":"Select priority",
+    "bug.low":"Low",
+    "bug.hi":"High",
+    "bug.med":"Medium",
+    "bug.can":"Cancel",
+    "bug.by":"Reported by:",
+    "bug.date":"Date reported:",
+    "bug.id":"Incident ID:",
+    "bug.com":"Comments",
+    "bug.nocom":"No Comments",
+    "bug.comd":"Write your comment here...",
+    "bug.sub":"Submit",
+    "bug.close":"Close",
+    "bug.add":"Add Comment",
+    "bug.op":"Open",
+
+
+    "bug.bug":"Bug",
+    "bug.clo":"Closed",
+    "bug.cri":"Critical",
+    "admin.total":"Total Issues",
+    "admin.search":"Search issues by title, description, or reporter",
+    "admin.all":"All Issues",
+    "admin.iss":"ISSUE",
+    "admin.by":"REPORTED BY",
+    "admin.date":"DATE",
+    "admin.stat":"STATUS",
+    "admin.pri":"PRIORITY",
+    "admin.cat":"CATEGORY",
+    "admin.act":"ACTIONS",
+    "admin.reply":"Reply to Issue",
+    "admin.res":"Your Response",
+    "admin.type":"Type your reply here...",
+    "admin.send":"Send Reply",
+    "admin.admin":"Admin Panel",
+    "admin.noiss":"No issues found",
+    "admin.try":"Try adjusting your search or filter settings",
+    "admin.filtered":"Filtered Issues",
+    "admin.tit":"Admin - User Issues",
+
+    "gantt.jan": "Jan",
+    "gantt.feb": "Feb",
+    "gantt.mar": "Mar",
+    "gantt.apr": "Apr",
+    "gantt.may": "May",
+    "gantt.jun": "Jun",
+    "gantt.jul": "Jul",
+    "gantt.aug": "Aug",
+    "gantt.sep": "Sep",
+    "gantt.oct": "Oct",
+    "gantt.nov": "Nov",
+    "gantt.dec": "Dec",
+    
+    "gantt.mon": "Mon",
+    "gantt.tue": "Tue",
+    "gantt.wed": "Wed",
+    "gantt.thu": "Thu",
+    "gantt.fri": "Fri",
+    "gantt.sat": "Sat",
+    "gantt.sun": "Sun",
+
+
+
+
+    "pro.tit":"Projects",
+    "pro.new":"New Project",    
+    "pro.search":"Search projects or team members",    
+    "pro.stat":"All Status",    
+    "pro.total":"Total Projects",        
+    "pro.all":"All Projects",    
+    "pro.err":"Error loading projects",
+    "pro.errd":"Failed to load projects",      
+    "pro.in":"In Progress",
+    "pro.comp":"Completed",           
+    "pro.loading":"Loading in progress...",
+    "pro.no":"No projects found",
+    "pro.try":"Try adjusting your search or filter settings",
+
 
 
 
