--- a/src/languages/tr.json
+++ b/src/languages/tr.json
@@ -19,9 +19,273 @@
   "sidebar.team": "Takımlar",
   "sidebar.set": "Ayarlar",
 
+  "procard.in":"Devam Ediyor",
+  "procard.comp":"Tamamlandı",
+  "procard.team":"Takım",
+  "procard.due":"Son Tarih",
+  "procard.upd":"Güncellendi",
+  "procard.own":"Proje Sahibi",
+  "procard.prog":"İlerleme",
+  "procard.del":"Projeyi Sil",
+  "procard.deld":"Silmek istediğinizden emin misiniz:",
+  "procard.deld2":"Bu işlem geri alınamaz.",
+  "procard.add": "Yeni Proje Oluştur",
+  "procard.add.tit": "Proje Adı",
+  "procard.add.titd": "Proje adını girin",
+  "procard.add.due": "Son Tarih",
+  "procard.add.desc": "Proje şu kişi tarafından oluşturulacak:",
+  "procard.add.create": "Proje Oluştur",
+
+  "dashboard.well": "Gösterge Panelinize Hoş Geldiniz",
+  "dashboard.welld": "İşte projelerinizin ve ekibinizin ilerlemesine genel bir bakış.",
+  "dashboard.view": "Tüm Projeleri Görüntüle",
+  "dashboard.total": "Toplam Projeler",
+  "dashboard.progress": "Devam Ediyor",
+  "dashboard.viewall": "Hepsini Görüntüle",
+  "dashboard.complete": "Tamamlandı",
+  "dashboard.proprog": "Proje İlerlemesi",
+  "dashboard.recent": "Son Faaliyetler",
+  "dashboard.upcoming": "Yaklaşan Son Tarihler",
+  "dashboard.doc": "Son Belgeler",
+  "dashboard.view.timeline": "Zaman Çizelgesini Görüntüle",
+  "dashboard.update":"Güncellendi",
+  "dashboard.due": "Son Tarih",
+  "dashboard.risk": "Risk Altında",
+  "dashboard.track": "Yolda",
+  "dashboard.terms": "Şartlar",
+  "dashboard.pri": "Gizlilik",
+  "dashboard.made": "Planwise tarafından",
+  "dashboard.by": "ile yapıldı",
+  "dashboard.rights": "Tüm hakları saklıdır",
+  "dashboard.week": "geçen haftadan beri",
+  "dashboard.month": "geçen aydan beri",
+
+  "gantt.tit": "Proje Zaman Çizelgesi",
+  "gantt.projects": "Projeler",
+  "gantt.all": "Tüm Projeler",
+  "gantt.filter": "Projeye Göre Filtrele",
+  "gantt.task": "Görevler",
+  "gantt.comp": "Tamamlanan",
+  "gantt.in": "Devam Ediyor",
+  "gantt.not": "Başlanmadı",
+  "gantt.risk": "Riskte",
+  "gantt.leg": "Gösterge",
+
+  "gantt.jan": "Oca",
+  "gantt.feb": "Şub",
+  "gantt.mar": "Mar",
+  "gantt.apr": "Nis",
+  "gantt.may": "May",
+  "gantt.jun": "Haz",
+  "gantt.jul": "Tem",
+  "gantt.aug": "Ağu",
+  "gantt.sep": "Eyl",
+  "gantt.oct": "Eki",
+  "gantt.nov": "Kas",
+  "gantt.dec": "Ara",
+
+  "gantt.mon": "Pzt",
+  "gantt.tue": "Sal",
+  "gantt.wed": "Çar",
+  "gantt.thu": "Per",
+  "gantt.fri": "Cum",
+  "gantt.sat": "Cmt",
+  "gantt.sun": "Paz",
+
+  "bug.rep": "Raporlarınız",
+  "bug.open": "Açık Sorunlar",
+  "bug.in": "Devam Ediyor",
+  "bug.res": "Çözüldü",
+  "bug.search": "Başlık veya açıklamaya göre raporları arayın",
+  "bug.stat": "Tüm Durumlar",
+  "bug.pri": "Tüm Öncelikler",
+  "bug.bugs": "Hatalar ve Olaylar",
+  "bug.report": "Sorun Bildir",
+  "bug.foot": "Sorun Takip Sistemi",
+  "bug.filtered": "Filtrelenmiş Raporlar",
+
+  "bug.replies": "yanıt",
+  "bug.reply": "yanıt",
+  "bug.view": "Detayları Görüntüle",
+  "bug.reported": "Raporlanma tarihi",
+  "bug.tit": "Sorun Başlığı",
+  "bug.titd": "Sorunun kısa özeti",
+  "bug.d": "Açıklama",
+  "bug.dd": "Lütfen yaşanan durumu ve sorunun nasıl tekrar edilebileceğini ayrıntılı şekilde belirtin",
+  "bug.cat": "Kategori",
+  "bug.cat.sel": "Kategori seçin",
+  "bug.cat.bug": "Hata",
+  "bug.cat.feature": "Özellik",
+  "bug.cat.ench": "İyileştirme",
+  "bug.priority": "Öncelik",
+  "bug.pri.sel": "Öncelik seçin",
+  "bug.low": "Düşük",
+  "bug.hi": "Yüksek",
+  "bug.med": "Orta",
+  "bug.can": "İptal",
+  "bug.by": "Raporlayan:",
+  "bug.date": "Raporlama tarihi:",
+  "bug.id": "Olay ID:",
+  "bug.com": "Yorumlar",
+  "bug.comd": "Yorumunuzu buraya yazın...",
+  "bug.sub": "Gönder",
+  "bug.close": "Kapat",
+  "bug.add": "Yorum Ekle",
+  "bug.op": "Açık",
+
+  "bug.bug": "Hata",
+  "bug.clo": "Kapatıldı",
+  "bug.cri": "Kritik",
+  "admin.total": "Toplam Sorunlar",
+  "admin.search": "Başlık, açıklama veya raporlayan kişiye göre sorunları ara",
+  "admin.all": "Tüm Sorunlar",
+  "admin.iss": "SORUN",
+  "admin.by": "RAPORLAYAN",
+  "admin.date": "TARİH",
+  "admin.stat": "DURUM",
+  "admin.pri": "ÖNCELİK",
+  "admin.cat": "KATEGORİ",
+  "admin.act": "EYLEMLER",
+  "admin.reply": "Soruna Yanıt Ver",
+  "admin.res": "Yanıtınız",
+  "admin.type": "Yanıtınızı buraya yazın...",
+  "admin.send": "Yanıtı Gönder",
+  "admin.admin": "Yönetici Paneli",
+  "admin.noiss": "Hiç sorun bulunamadı",
+  "admin.try": "Arama veya filtre ayarlarınızı değiştirerek tekrar deneyin",
+  "admin.filtered":"Filtrelenmiş Sorunlar",
+  "admin.tit": "Yönetici - Kullanıcı Sorunları",
+
+  "pro.tit":"Projeler",
+  "pro.new":"Yeni Proje",    
+  "pro.search":"Projeleri veya ekip üyelerini ara",    
+  "pro.stat":"Tüm Durumlar",    
+  "pro.total":"Toplam Proje",        
+  "pro.all":"Tüm Projeler",    
+  "pro.err":"Projeler yüklenirken hata oluştu",
+  "pro.errd":"Projeler yüklenemedi",
+  "pro.in":"Devam Ediyor",
+  "pro.comp":"Tamalandı",  
+  "pro.loading":"Yükleniyor...",
+  "pro.no":"Hiçbir proje bulunamadı",
+  "pro.try":"Aramanızı veya filtre ayarlarınızı yeniden düzenlemeyi deneyin",
+
   "sidebar.help": "Sorunlar & Yardım",
   "sidebar.iss": "Kullanıcı Sorunları",
   "sidebar.bug": "Hata Raporları",
+
+  "toggle.h":"Yatay",
+  "toggle.v":"Dikey",
+
+  "prode.create":"Kategori Oluştur",
+  "prode.search":"Kategorileri, görevleri, girişleri ara...",
+  "prode.new":"Yeni Kategorize Edici",
+  "prode.add":"Liste Ekle",
+  "prode.prog":"İlerleme",
+  "prode.load":"Proje detayları yükleniyor...",
+  "prode.fin":"Tüm Görevler Tamamlandı",
+  "prode.find":"Tüm görevlerinizi tamamladığınız için harika iş çıkardınız",
+  "prode.e":"Kategori Düzenle",
+  "prode.e.tit":"Başlık",
+  "prode.e.titd":"Yeni Kategorizer",
+  "prode.e.tag":"Etiket Rengi",
+  "prode.e.col":"kırmızı",
+  "prode.del":"Sil",
+  "prode.can":"İptal",
+  "prode.done":"Tamam",
+  "prode.del.tit":"Kategoriyi Sil",
+  "prode.del.d":"Emin misiniz? Bu işlem geri alınamaz.",
+  "prode.addent":"Girdi Ekle",
+  "prode.edit.task":"Görev Listesini Düzenle",
+  "prode.no.ent":"Girdi yok",
+
+  "prode.edit":"Düzenle",
+  "prode.ass":"Ata",
+  "prode.delete":"Sil",
+
+  "prode.edit.tit":"Görevi Düzenle",
+  "prode.edit.name":"Görev Adı",
+  "prode.edit.due":"Bitiş Tarihi (Opsiyonel)",
+  "prode.edit.mark":"Tamamlandı olarak işaretle",
+  "prode.edit.att":"Dosya Ekle",
+  "prode.edit.attd":"Dosya Seç",
+  "prode.edit.attd2":"Seçili dosya yok",
+  "prode.edit.attd3":"Mevcut dosyanın yerine yeni bir dosya yükleyin.",
+  "prode.edit.save":"Değişiklikleri Kaydet",
+  "prode.edit.clr":"Temizle",
+  "prode.edit.warn":"Uyarı Eşiği (gün)",
+  "prode.edit.warnd":"Görev bu kadar gün içinde bitecekse uyarı göster",
+  "prode.ass.tit":"Görev Ata",
+  "prode.ass.1":"Atanan Takımlar",
+  "prode.ass.2":"Mevcut Takımlar",
+  "prode.ass.3":"Atanan Kullanıcılar",
+  "prode.ass.4":"Mevcut Kullanıcılar",
+  "prode.ass.add":"Ekle",
+  "prode.ass.ass":"Görevi Ata",
+  
+
+
+
+  "cal.tit":"Takvim",
+  "cal.cal":"Proje Takvimi",
+  "cal.today":"Bugün",
+  "cal.tasks":"Gün için görevler:",
+  "cal.tasks.no":"Bu tarih için planlanmış görev yok",
+
+
+  "team.mem":"Üye",
+  "team.mid":"Orta",
+  "team.sen":"Kıdemli",
+  "team.jun":"Genç",
+  "team.lead":"Takım Lideri",
+
+  "set.tit":"Proje Ayarları",
+  "set.gen":"Genel Ayarlar",
+  "set.name":"Proje Adı",
+  "set.d":"Açıklama",
+  "set.update":"Arka Plan Resmini Güncelle",
+  "set.choose":"Dosya Seç",
+  "set.no":"hiç dosya seçilmedi",
+  "set.advanced":"Gelişmiş Ayarlar",
+  "set.delete":"Projeyi Sil",
+  "set.per":"Bu ayarları değiştirmek için proje sahibi olmanız gerekiyor",
+  "set.named":"Benim Projem",
+  "set.dd":"Projemin kısa bir açıklaması.",
+  "set.warn":"Bu projeyi silmek istediğinizden emin misiniz?",
+  "set.warn.ok":"Proje silindi!",
+
+  "adset.tit": "Gelişmiş Ayarlar",
+  "adset.back": "Genel Ayarlara Geri Dön",
+  "adset.inv": "İnsanları Davet Et",
+  "adset.search": "Üye Ara",
+  "adset.acc": "Erişimi Yönet",
+  "adset.team": "Takımı Yönet",
+  "adset.rem": "Kaldır",
+  "adset.own": "Sahip",
+  "adset.team2":"Takım",
+
+  "adset.email": "E-posta Adresi",
+  "adset.emaild": "E-posta girin...",
+  "adset.invite": "Davet Et",
+  "adset.link": "Link ile Davet Et",
+
+  "adset.add": "Takım Ekle",
+  "adset.teaman": "Takımları Yönet",
+  "adset.save": "Kaydet",
+  "adset.done": "Tamam",
+
+  "adset.access": "'in Erişimi",
+  "adset.view": "Projeyi Görüntüle",
+  "adset.edit": "Projeyi Düzenle",
+  "adset.del": "Projeyi Sil",
+
+  "adset.conf": "Kaldırma Onayı",
+  "adset.confm": "Silmek istediğinizden emin misiniz: ",
+  "adset.remteam": "Takımı silmek istediğinizden emin misiniz:",
+  "adset.delcon": "Silme Onayı",
+  "adset.add2":"Ekle",
+  "adset.text":"Yeni takım ismi",
+
 
 
   "login":"Giriş Yap",
