Project Data Updateable
-We can now update project data, in a way that would also update in the backend.
-Small Language fixes.

--- a/src/languages/tr.json
+++ b/src/languages/tr.json
@@ -187,7 +187,7 @@
 
   "prode.create": "Kategori Oluştur",
   "prode.search": "Kategorileri, görevleri, girişleri ara...",
-  "prode.new": "Yeni Kategorize Edici",
+  "prode.new": "Yeni Kategori",
   "prode.add": "Liste Ekle",
   "prode.prog": "İlerleme",
   "prode.load": "Proje detayları yükleniyor...",
