--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -143,6 +143,12 @@
   "adset.emaild": "Enter email...",
   "adset.invite": "Invite",
   "adset.link": "Invite by Link",
+  "adset.emailInvalid": "Invalid email address",
+  "adset.inviteSent": "Invitation sent",
+  "adset.inviteError": "Error sending invitation",
+  "adset.linkCopied": "Link copied to clipboard",
+  "adset.copyError": "Error copying link",
+  "adset.sending": "Sending invitation...",
 
   "adset.add": "Add Team",
   "adset.teaman": "Manage Teams for",
