Team Language Fix

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -112,6 +112,30 @@
   "team.sen": "Senior",
   "team.jun": "Junior",
   "team.lead": "Team Lead",
+  "team.search_placeholder": "Search for a Team or a Member",
+  "team.hidemems": "Hide Members",
+  "team.viewmems": "View Members",
+  "team.multimem": "Members",
+  "team.singlemem": "Member",
+  "team.addmem": "Add member",
+  "team.editmem": "Edit team",
+  "team.editteamcapt": "Edit Team",
+  "team.deletmem": "Delete team",
+  "team.grid": "Grid",
+  "team.list": "List",
+  "team.newteam": "New Team",
+  "team.crnewteam": "Create New Team",
+  "team.crteam": "Create Team",
+  "team.tpcancel": "Cancel",
+  "team.savechngs": "Save Changes",
+  "team.entertname": "Enter team name",
+  "team.addtmems": "Add Team Members",
+  "team.selecmems": "Select Members",
+  "team.slctd": "selected",
+  "team.add": "Add",
+  "team.nosearchfnd": "No teams found matching your search criteria",
+
+  "icon.search": "Search Icons",
 
   "set.tit": "Project Settings",
   "set.gen": "General Settings",
