--- a/src/languages/tr.json
+++ b/src/languages/tr.json
@@ -251,6 +251,30 @@
   "team.sen": "Kıdemli",
   "team.jun": "Genç",
   "team.lead": "Takım Lideri",
+  "team.search_placeholder": "Bir Takım veya Takım Üyesini Arat",
+  "team.hidemems": "Üyeleri Sakla",
+  "team.viewmems": "Üyeleri Göster",
+  "team.multimem": "Üyeler",
+  "team.singlemem": "Üye",
+  "team.addmem": "Üye ekle",
+  "team.editmem": "Takımı düzenle",
+  "team.editteamcapt": "Takımı Düzenle",
+  "team.deletmem": "Takımı sil",
+  "team.grid": "Izgara",
+  "team.list": "Liste",
+  "team.newteam": "Yeni Takım",
+  "team.crnewteam": "Yeni Takım Oluştur",
+  "team.crteam": "Takım Oluştur",
+  "team.tpcancel": "İptal",
+  "team.savechngs": "Değiklikleri Kaydet",
+  "team.entertname": "Takım ismi gir",
+  "team.addtmems": "Takım Üyesi Ekle",
+  "team.selecmems": "Üyeleri Seç",
+  "team.slctd": "seçili",
+  "team.add": "Ekle",
+  "team.nosearchfnd": "Arama kriterlerine uygun takım bulunamadı",
+
+  "icon.search": "İkon Arat",
 
   "set.tit": "Proje Ayarları",
   "set.gen": "Genel Ayarlar",
