--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -44,10 +44,11 @@
   "procard.comp": "Completed",
   "procard.team": "Team",
   "procard.due": "Due",
-  "procard.upd": "Updated",
+  "procard.upd": "Created",
   "procard.own": "Project Owner",
   "procard.prog": "Progress",
   "procard.del": "Delete Project",
+  "procard.leave": "Leave Project",
   "procard.deld": "Are you sure you want to delete",
   "procard.deld2": "This action cannot be undone.",
   "procard.add": "Create New Project",
