--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -50,7 +50,9 @@
   "procard.del": "Delete Project",
   "procard.leave": "Leave Project",
   "procard.deld": "Are you sure you want to delete",
+  "procard.leaved": "Are you sure you want to leave",
   "procard.deld2": "This action cannot be undone.",
+  "procard.leaved2": "To access again, you will need another invite.",
   "procard.add": "Create New Project",
   "procard.add.tit": "Project Name",
   "procard.add.titd": "Enter project name",
