--- a/src/languages/tr.json
+++ b/src/languages/tr.json
@@ -46,7 +46,9 @@
   "procard.del": "Projeyi Sil",
   "procard.leave": "Leave Project",
   "procard.deld": "Silmek istediğinizden emin misiniz:",
+  "procard.leaved": "Ayrılmak istediğinize emin misiniz:",
   "procard.deld2": "Bu işlem geri alınamaz.",
+  "procard.leaved2": "Yeniden erişmek için tekrar davet edilmeniz gerekir",
   "procard.add": "Yeni Proje Oluştur",
   "procard.add.tit": "Proje Adı",
   "procard.add.titd": "Proje adını girin",
