--- a/src/languages/tr.json
+++ b/src/languages/tr.json
@@ -307,6 +307,7 @@
   "set.no": "hiç dosya seçilmedi",
   "set.advanced": "Gelişmiş Ayarlar",
   "set.delete": "Projeyi Sil",
+  "set.leave": "Projeden Ayrıl",
   "set.per": "Bu ayarları değiştirmek için proje sahibi olmanız gerekiyor",
   "set.named": "Benim Projem",
   "set.dd": "Projemin kısa bir açıklaması.",
